Changelog
=========

1.0b10 (unreleased)
-------------------

- Check the review_state instead of the workflow after a comment has been 
  posted to decide if a message is shown to the user. This allows integrators 
  to use custom review workflows.
  [timo]


1.0b9 (2010-10-07)
------------------

- Replace the can_manage method with a can_review method that checks the 
  'Review comments' permission. This fixes 
  http://dev.plone.org/plone/ticket/11145.
  [timo]

- Fix moderation actions (publish, delete) in the moderation view with virtual 
  hosts. This is a replacement for http://dev.plone.org/plone/changeset/35608.
  [timo]

- Do not show two "login to add comments" buttons when there are no comments
  yet. This fixes http://plone.org/products/plone.app.discussion/issues/12.
  [timo]


1.0b8 (2010-10-04)
------------------

- Apply the comment viewlet template and styles to the new title-less comments.
  This might require integrators to apply their custom templates and styles.
  [timo]

- Remove title field from the comment form and replace it with an auto-generated
  title ("John Doe on Welcome to Plone").
  [timo]
  
- Fix http://dev.plone.org/plone/ticket/11098: "Comment byline shows login 
  name, not full name" 
  [kiorky]

- Make sure the __parent__ pointer (the conversation) of a comment is not 
  acquisition wrapped in conversation.addComment. This fixes 
  http://dev.plone.org/plone/ticket/11157.
  [timo]

- Revert r35608 since this was breaking the comment moderation bulk actions. 
  The BulkActionsView expects the absolute path of the comments without the 
  portal url (e.g. '/plone/doc1/++conversation++default/1285346769126020'). 
  This fixes http://dev.plone.org/plone/ticket/11156.
  [timo]

- Use "(function($) { /* some code that uses $ \*/ })(jQuery)" instead of
  "$(document).ready(function(){ /* some code that uses $ \*/ });" to invoke 
  jQuery code.
  [timo]

- Finnish translation added.
  [saffe]

- Italian translation updated.
  [keul]