@@ -4,6 +4,10 @@ Changelog
 1.0b10 (unreleased)
 -------------------
 
+- Check the review_state to decide if moderation is enabled. If the current
+  comment workflow implements a 'pending' state, moderation is enabled.
+  [timo]
+  
 - Check the review_state instead of the workflow after a comment has been 
   posted to decide if a message is shown to the user. This allows integrators 
   to use custom review workflows.
